--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,54 @@
 services:
+  stats-db:
+    image: postgres:16.1
+    environment:
+      POSTGRES_DB: ewm-stats
+      POSTGRES_USER: stats
+      POSTGRES_PASSWORD: stats
+    ports:
+      - "6542:5432"
+    volumes:
+      - stats-db-data:/var/lib/postgresql/data
+
   stats-server:
+    build:
+      context: .
+      dockerfile: ewm-stats-service/ewm-stats-service-server/Dockerfile
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://stats-db:5432/ewm-stats
+      SPRING_DATASOURCE_USERNAME: stats
+      SPRING_DATASOURCE_PASSWORD: stats
+      SPRING_PROFILES_ACTIVE: prod
+    depends_on:
+      - stats-db
     ports:
       - "9090:9090"
 
-  stats-db:
+  ewm-db:
     image: postgres:16.1
+    environment:
+      POSTGRES_DB: ewm-main
+      POSTGRES_USER: ewm
+      POSTGRES_PASSWORD: ewm
+    ports:
+      - "6541:5432"
+    volumes:
+      - ewm-db-data:/var/lib/postgresql/data
 
   ewm-service:
+    build:
+      context: .
+      dockerfile: ewm-main-service/Dockerfile
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://ewm-db:5432/ewm-main
+      SPRING_DATASOURCE_USERNAME: ewm
+      SPRING_DATASOURCE_PASSWORD: ewm
+      SPRING_PROFILES_ACTIVE: prod
+    depends_on:
+      - ewm-db
     ports:
       - "8080:8080"
 
-  ewm-db:
-    image: postgres:16.1
+volumes:
+  stats-db-data:
+  ewm-db-data:
