feat: implement main service API and statistics integration

--- a/ewm-main-service/Dockerfile
+++ b/ewm-main-service/Dockerfile
@@ -7,6 +7,7 @@ COPY ewm-main-service/pom.xml ewm-main-service/pom.xml
 COPY ewm-stats-service/pom.xml ewm-stats-service/pom.xml
 COPY ewm-stats-service/ewm-stats-service-dto/pom.xml ewm-stats-service/ewm-stats-service-dto/pom.xml
 COPY ewm-stats-service/ewm-stats-service-client/pom.xml ewm-stats-service/ewm-stats-service-client/pom.xml
+COPY ewm-stats-service/ewm-stats-service-server/pom.xml ewm-stats-service/ewm-stats-service-server/pom.xml
 
 RUN mvn dependency:go-offline -pl ewm-main-service -am
 
