feat: implement main service API and statistics integration

--- a/ewm-main-service/src/test/resources/application-test.yml
+++ b/ewm-main-service/src/test/resources/application-test.yml
@@ -4,6 +4,9 @@ spring:
     driver-class-name: org.h2.Driver
     username: sa
     password: sa
+    hikari:
+      initialization-fail-timeout: 60000
+      connection-timeout: 20000
   jpa:
     hibernate:
       ddl-auto: none
