--- a/ewm-main-service/src/main/resources/application.yml
+++ b/ewm-main-service/src/main/resources/application.yml
@@ -4,6 +4,9 @@ server:
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
+    hikari:
+      initialization-fail-timeout: 60000
+      connection-timeout: 20000
   jpa:
     hibernate:
       ddl-auto: none
