--- a/ewm-main-service/src/main/resources/application.yml
+++ b/ewm-main-service/src/main/resources/application.yml
@@ -5,8 +5,8 @@ spring:
   datasource:
     driver-class-name: org.postgresql.Driver
     hikari:
-      initialization-fail-timeout: 60000
-      connection-timeout: 20000
+      initialization-fail-timeout: -1
+      connection-timeout: 30000
   jpa:
     hibernate:
       ddl-auto: none
@@ -14,6 +14,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
+    defer-datasource-initialization: true
   sql:
     init:
       mode: always
