--- a/ewm-main-service/src/test/resources/application-test.yml
+++ b/ewm-main-service/src/test/resources/application-test.yml
@@ -5,8 +5,8 @@ spring:
     username: sa
     password: sa
     hikari:
-      initialization-fail-timeout: 60000
-      connection-timeout: 20000
+      initialization-fail-timeout: -1
+      connection-timeout: 30000
   jpa:
     hibernate:
       ddl-auto: none
@@ -15,6 +15,7 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
     open-in-view: false
+    defer-datasource-initialization: true
   sql:
     init:
       mode: always
