--- a/ewm-stats-service/ewm-stats-service-server/src/main/resources/application.yml
+++ b/ewm-stats-service/ewm-stats-service-server/src/main/resources/application.yml
@@ -21,3 +21,12 @@ spring:
 logging:
   level:
     ru.practicum.stats: debug
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
+  endpoint:
+    health:
+      show-details: always
