--- a/ewm-main-service/src/main/resources/application.yml
+++ b/ewm-main-service/src/main/resources/application.yml
@@ -27,3 +27,12 @@ spring:
 logging:
   level:
     org.springframework: INFO
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
+  endpoint:
+    health:
+      show-details: always
